--- a/wp-content/themes/addlee/assets/scss/theme/_landingpage.scss
+++ b/wp-content/themes/addlee/assets/scss/theme/_landingpage.scss
@@ -281,6 +281,20 @@ section.esg {
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-position-x: -445px;
+
+                @media screen and (min-width: 776px) and ( max-width: 999px) {
+                    background-image: url('http://localhost/addisonlee2/wp-content/uploads/2024/02/mobile-res-multivan.jpg') !important;
+                    background-position: 0px !important;
+                    width: 350px;
+                    height: 263px;
+                }
+
+                @media screen and (max-width: 775px) and ( min-width: 200px) {
+                    background-image: url('http://localhost/addisonlee2/wp-content/uploads/2024/02/mobile-res-multivan.jpg') !important;
+                    background-position: 0px !important;
+                    width: 350px;
+                    height: 263px;
+                }
                
             }
         }
@@ -339,7 +353,7 @@ section.esg {
     }
     // Addison Lee Greener Future Programme
     &:nth-child(7) {
-        background-color: $grey-light-section;
+        background-color: $white;
     
 
         .flexi.multi .row .panel:last-child.info-blocks,
@@ -365,6 +379,7 @@ section.esg {
              
 
         .flexi.multi {
+            position: relative;
             p {
                 font-size: 16px;
                 line-height: 28px;
@@ -422,6 +437,23 @@ section.esg {
                         align-items: center;
                         
                     }
+                }
+            }
+            .cta-container {
+                position: absolute;
+                bottom: 0;
+                text-align: center;
+                width: 100%;
+
+                a {
+                    max-width: 141px;
+                    max-height: 48px;
+                    background-color: $yellow-brand;
+                    padding: 12px 16px;
+                    font-weight: 700;
+                    font-family: inherit;
+                    text-transform: uppercase;
+                    text-align: center;
                 }
             }
         }
@@ -564,7 +596,7 @@ section.esg {
     // Our Social Projects
     &:nth-child(9) {
         background-color: $grey-light-section;
-
+        
         .flexi.multi .row .panel:last-child.info-blocks, .flexi.multi .row .panel:nth-child(even).info-blocks {
             border-right: none;
         }
@@ -730,12 +762,25 @@ section.esg {
         .image-container {
             padding-bottom: 2em;
             margin: 0 auto;
-            width: 40%;
+            width: 63%;
             display: flex;
             justify-content: center;
+            padding-left: 58px;
+
+            @media screen and (min-width: 1001px) and (max-width: 1400px) {
+                width: 80%;
+            }
 
             @media screen and (max-width: 1000px) {
                 width: 56%;
+            }
+
+            @media screen and (min-width: 401px) and (max-width: 999px) {
+                width: 80%;
+            }
+
+            @media screen and (max-width: 400px) {
+                width: 100%;
             }
 
             .inner-content {
@@ -749,6 +794,10 @@ section.esg {
 
                 @media screen and (max-width: 1000px) {
                     width: 56%;
+                }
+
+                @media screen and (min-width: 401px) and (max-width: 999px) {
+                    width: 60%;
                 }
                
             }
@@ -828,6 +877,8 @@ section.esg {
                                 display: flex;
                                 justify-content: center;
                                 flex-direction: column;
+                                min-width: 91px;
+                                width: 100%;
                             }
                           
                         }
